petal_core/src/snapshots/petal_core__lexer__tests__comments.snap
---
source: petal_core/src/lexer.rs
expression: tokens
---
[
    Token {
        token_type: Comment,
        lexeme: "# hello world",
        literal: Some(
            Comment(
                "hello world",
            ),
        ),
        span: Span {
            start: Pos(
                0,
            ),
            end: Some(
                Pos(
                    13,
                ),
            ),
        },
    },
]
