petal_core/src/snapshots/petal_core__lexer__tests__equal_operators.snap
---
source: petal_core/src/lexer.rs
expression: "lex(\"== != <= >=\".to_string())"
---
[
    Token {
        token_type: EqualEqual,
        lexeme: "==",
        literal: None,
        span: Span {
            start: Pos(
                0,
            ),
            end: Some(
                Pos(
                    1,
                ),
            ),
        },
    },
    Token {
        token_type: BangEqual,
        lexeme: "!=",
        literal: None,
        span: Span {
            start: Pos(
                3,
            ),
            end: Some(
                Pos(
                    4,
                ),
            ),
        },
    },
    Token {
        token_type: LessEqual,
        lexeme: "<=",
        literal: None,
        span: Span {
            start: Pos(
                6,
            ),
            end: Some(
                Pos(
                    7,
                ),
            ),
        },
    },
    Token {
        token_type: GreaterEqual,
        lexeme: ">=",
        literal: None,
        span: Span {
            start: Pos(
                9,
            ),
            end: Some(
                Pos(
                    10,
                ),
            ),
        },
    },
]
